test/semantic_errors/invalid_assignment7.mc
void main() {
    int i;
    char c;
    i = c; /* cannot assign char to int */
}